--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -9,7 +9,7 @@
         <div class="col-md-4" style="padding:0px" >
           <div class="btn-group-vertical">
             <button class="btn btn-primary" type="button" name="button" ng-click="knowledgeBase()"> Knowledge base </button>
-            <button class="btn btn-danger" type="button" name="button"  mwl-confirm title="Close Chat" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="closeChat(data.uid)" confirm-button-type="default" cancel-button-type="default"> Close Chat </button>
+            <button class="btn btn-danger" type="button" name="button"  mwl-confirm title="Close Chat" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatClose(data.uid)" confirm-button-type="default" cancel-button-type="default"> Close Chat </button>
           </div>
         </div>
         <div class="col-md-2 " >
