--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.listings.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.listings.item.html
@@ -32,6 +32,9 @@
         <i class="fa fa-bar-chart-o fa-5x" style="color:#fafafa;margin-top:15px;"></i>
       </div> -->
       <div class = "col-md-12" style="padding-right:0px;">
+        <span class="pull-left" style="cursor:pointer;" ng-click = "rowActionClicked('delete')">
+          <i class="fa fa-trash fa-lg" style="margin-top:20px;"></i> &nbsp;Delete
+        </span>
         <span class="pull-right" style="cursor:pointer;" ng-click = "rowActionClicked('edit')">
           <i class="fa fa-pencil fa-lg" style="margin-top:20px;"></i> &nbsp;Edit
         </span>
