--- a/ecommerce/static/ngTemplates/app.ecommerce.categories.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.categories.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="col-md-2 hidden-sm hidden-xs  card bg-white " style="margin-left:15px;margin-right:15px;" >
+  <div class="col-md-2 hidden-sm hidden-xs  card bg-white " style="margin-left:15px;margin-right:15px;" ng-if="showFilter==true">
     <div class="row" style="padding-top:40px; ">
       <div class="container-fluid ">
         <form>
@@ -7,6 +7,16 @@
           <div class="form-group" style="padding-bottom:10px; border-bottom:1px solid #d0d0d0;">
             <rzslider rz-slider-model="slider.minValue" rz-slider-high="slider.maxValue" rz-slider-options="slider.options"></rzslider>
           </div>
+          <!-- <span><b>Sort</b></span>
+          <div class="form-group" style="padding-bottom:10px; border-bottom:1px solid #d0d0d0;">
+            <div class="form-group">
+              <input type="radio" name="sort" ng-model="data.sort" value="lth"> Low to High <br>
+            </div>
+            <div class="form-group">
+              <input type="radio" name="sort" ng-model="data.sort" value="htl"> High to Low
+            </div> -->
+            <!-- <rzslider rz-slider-model="slider.minValue" rz-slider-high="slider.maxValue" rz-slider-options="slider.options"></rzslider> -->
+          <!-- </div> -->
           <div class="form-group" style="padding-bottom:10px; border-bottom:1px solid #d0d0d0;" ng-repeat="f in category.fields">
             <span ng-if="f.fieldType=='boolean'">
                <input type="checkbox" ng-model="f.val" > {{f.name}}
@@ -43,8 +53,32 @@
     </div>
   </div>
 
+  <div class="col-md-2 hidden-xs hidden-sm" style="margin-left:20px;margin-right:20px;" ng-if="showFilter==false">
+    <div  class="row card bg-white ">
+      <h4 class="text-center">Other Categories</h4>
+      <div ng-repeat="r in categories" style="padding:0px;">
+        <div class="col-md-12 anim-in-out anim-zoom-out">
+          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : r.name})">
+            <div class="row">
+                <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
+              <img style="width: 100%; height:200px;" class="img" ng-src="{{r.visual}}" >
+              <img style="width: 100%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
+            </div>
+          </div>
+            <div class="row container-fluid" style="padding:0px;margin-bottom:10px">
+              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;padding-top:25px">
+              <h5 ng-if="r.name.length>35" style="margin:0px;  height:60px;">{{r.name.slice(0,35)}}...</h5>
+              <h5 ng-if="r.name.length<=35" style="margin:0px;  height:60px;">{{r.name}}</h5>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <div class="row hidden-lg hidden-md card bg-white" style="margin:15px; padding:15px;">
+
+  <div class="row hidden-lg hidden-md card bg-white" style="margin:15px; padding:15px;" ng-if="showFilter==true">
 
     <div class="col-xs-12">
       <span><b>Select Price Range</b></span>
@@ -89,6 +123,7 @@
     </div>
 
   </div>
+
 
   <div class="col-md-7 card bg-white" style="padding-top:0px;margin-left:15px;margin-right:15px;">
 
@@ -245,7 +280,7 @@
   </div>
 </div>
 
-<div class="col-md-2 hidden-xs hidden-sm" style="margin-left:20px;margin-right:20px;" >
+<div class="col-md-2 hidden-xs hidden-sm" style="margin-left:20px;margin-right:20px;" ng-if="showFilter==true">
   <div  class="row card bg-white ">
     <h4 class="text-center">Other Categories</h4>
     <div ng-repeat="r in categories" style="padding:0px;">
