--- a/support/static/ngTemplates/app.support.knowledgeBase.modal.html
+++ b/support/static/ngTemplates/app.support.knowledgeBase.modal.html
@@ -2,23 +2,26 @@
   <div class="container-fluid">
     <section>
       <div class="row text-center">
-        <h2>Refund and Cancellation Policy </h2>
+        <input type="text" class="form-control" name="" value="" placeholder="Search by title..">
       </div>
-      <div class="container-fluid" style="margin-left:40px;padding:0px">
-        <p>Our focus is complete customer satisfaction. In the event, if you are displeased with the services provided, we will refund back the money, provided the reasons are genuine and proved after investigation. Please read the fine prints of each deal before buying it, it provides all the details about the services or the product you purchase.<br> In case of dissatisfaction from our services, clients have the liberty to cancel their projects and request a refund from us. Our Policy for the cancellation and refund will be as follows:</p>
-        <h4>Cancellation Policy</h4>
-        <p>For Cancellations please contact the us via contact us link.
-        Requests received later than 5 business days prior to the end of the current service period will be treated as cancellation of services for the next service period. </p>
-        <h4>Refund Policy</h4>
-        <ul>
-          <li>
-            In case any client is not completely satisfied with our products we can provide a refund.
-          </li>
-          <li>
-            If paid by credit card, refunds will be issued to the original credit card provided at the time of purchase and in case of payment gateway name payments refund will be made to the same account.
-          </li>
-        </ul>
+      <hr>
+      <div class="row">
+        <div class="panel-group" id="accordion">
+          <div class="panel panel-default" ng-repeat="d in data">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#{{$index}}">{{d.title}}</a>
+              </h4>
+            </div>
+            <div id="{{$index}}" class="panel-collapse collapse">
+              <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+            </div>
+          </div>
+        </div>
       </div>
+
     </section>
   </div>
 
