changing in knowledge base

--- a/support/static/ngTemplates/app.support.knowledgeBase.modal.html
+++ b/support/static/ngTemplates/app.support.knowledgeBase.modal.html
@@ -1,4 +1,4 @@
-<div class="modal-body">
+<!-- <div class="modal-body">
   <div class="container-fluid">
     <section>
       <div class="row text-center">
@@ -29,4 +29,4 @@
       close
     </button>
   </div>
-</div>
+</div> -->
