--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.support.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.support.html
@@ -25,10 +25,10 @@
       </div>
       <!-- <div ng-if="tab.app == 'editproduct'">
           <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.modal.html'"></div>
-      </div>
-      <div ng-if="tab.app == 'productExplore'">
-          <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.explore.html'"></div>
       </div> -->
+      <div ng-if="tab.app == 'resolvedInfo'">
+          <div ng-include="'/static/ngTemplates/app.ecommerce.vendor.support.resolved.explore.html'"></div>
+      </div>
     </uib-tab>
   </uib-tabset>
 </div>
