--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -82,7 +82,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid bg-blue" style="position:relative; width:100%; bottom:0px; padding:20px;">
+<div class="container-fluid bg-white" style="position:relative; width:100%; bottom:0px; padding:20px;">
   <div class="row hidden-xs hidden-sm">
     <div class="col-md-1">
     </div>
@@ -94,39 +94,39 @@
     </div> -->
     <div class="col-md-3 {{settings.playstoreLink.indexOf('http')==-1 && settings.appstoreLink.indexOf('http')==-1 ? 'col-md-offset-2 col-md-offset-1' :''}}">
       <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellations and Returns</span>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellations and Returns</span>
     </div>
     <div class="col-md-3 text-center">
-      <strong style="font-size:15px;">STERLING SELECT</strong><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
+      <strong style="font-size:15px;color:rgb(24, 89, 46)">STERLING SELECT</strong><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
       <!-- <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br> -->
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
-      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
 
     </div>
     <div class="col-md-3 text-right">
       <div class="row">
-        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
+        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
           <i class="fa fa-square-o fa-stack-2x"></i>
           <i class="fa fa-twitter fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
+        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
           <i class="fa fa-square-o fa-stack-2x"></i>
           <i class="fa fa-linkedin fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
+        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
           <i class="fa fa-square-o fa-stack-2x"></i>
           <i class="fa fa-facebook fa-stack-1x"></i>
         </a>
       </div>
       <div class="row">
-        <span>Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
+        <span style="color:rgb(24, 89, 46)">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
       </div>
       <div class="row">
-        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
-        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
+        <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
+        <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
       </div>
     </div>
   </div>
@@ -148,37 +148,37 @@
 
     <div class="col-xs-6 text-center">
       <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
-      <span style="cursor:pointer;font-size:12px" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
-      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellationa and Returns</span>
+      <span style="cursor:pointer;font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
+      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellationa and Returns</span>
     </div>
 
     <div class="col-xs-6 text-center">
-      <strong style="font-size:12px;">STERLING SELECT</strong><br>
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
+      <strong style="font-size:12px;color:rgb(24, 89, 46)">STERLING SELECT</strong><br>
+      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
       <!-- <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br> -->
-      <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
-      <span style="cursor:pointer; font-size:12px" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
+      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
+      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
     </div>
 
     <div class="col-xs-12 text-center">
       <div class="row">
-        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
+        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
           <i class="fa fa-twitter fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
+        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
           <i class="fa fa-linkedin fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;">
+        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
           <i style="font-size:12px;" class="fa fa-facebook fa-stack-1x"></i>
         </a>
       </div>
       <div class="row">
-        <span style="font-size:12px;">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
+        <span style="font-size:12px;color:rgb(24, 89, 46)">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
       </div>
       <div class="row">
-        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
-        <span style="color:white;font-size:12px;cursor:pointer" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
+        <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
+        <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
       </div>
     </div>
 
