--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -1,4 +1,4 @@
-<div class="row bg-blue ecomNav" style="height:10vh;width:100%;padding-top: 8px;padding-bottom: 8px;">
+<div class="row bg-white ecomNav" style="height:10vh;width:100%;padding-top: 8px;padding-bottom: 8px;">
 
   <div class="col-xs-3 text-center">
     <img ng-click="$state.go('ecommerce')" src="/static/images/sterlin_select.png" style="height:7vh;cursor:pointer;" alt="">
@@ -7,7 +7,7 @@
   <div style="padding-top:1.5vh;" class="hidden-xs hidden-sm">
     <div class="col-xs-6" style="padding:0px;">
       <!-- <input type="text" class="" style="width:100%;color: #000;text-indent: 10px;outline: none;" placeholder="Search for products, brands and more.."> -->
-      <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;border-radius: 7px;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="Search 200 Products in Grains, Rice and Dry Fruits........">
+      <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;border-radius: 7px;color:rgb(24, 89, 46)" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="Search 200 Products in Grains, Rice and Dry Fruits........">
     </div>
     <!-- <div class="col-xs-1 text-center" style="padding:0px;">
       <div style="width:50px;height:29px;padding-top:3px;background-color:#e2e2e2;color:grey; cursor:pointer;" ng-click="search()">
@@ -17,42 +17,42 @@
   </div>
 
   <div class="col-md-1 text-center dropdown hidden-xs hidden-sm">
-    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;font-size:17px" ng-if="me.pk" > {{me.first_name}}</span>
+    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" ng-if="me.pk" > {{me.first_name}}</span>
     <ul class="dropdown-menu " style="margin-right:0px;padding-top:0px;">
       <li> <img ng-src="{{me.pk | getDP}}" style="width: 170px;" alt=""> </li>
-      <li><a ui-sref="account.orders" >Orders</a></li>
-      <li><a ui-sref="account">Account</a></li>
-      <li><a href="" ng-click="logoutPage()">Logout</a></li>
+      <li><a ui-sref="account.orders" style="color:rgb(24, 89, 46)">Orders</a></li>
+      <li><a ui-sref="account" style="color:rgb(24, 89, 46)">Account</a></li>
+      <li><a href="" ng-click="logoutPage()" style="color:rgb(24, 89, 46)">Logout</a></li>
     </ul>
   </div>
 
   <div class="col-md-2 text-center hidden-xs hidden-sm" ng-if="me.pk" >
-    <span ng-click="$state.go('account.cart')" style="cursor:pointer;font-size:17px" >  Cart <i class="fa fa-shopping-cart fa-lg"></i></span>
+    <span ng-click="$state.go('account.cart')" style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" >  Cart <i class="fa fa-shopping-cart fa-lg"></i></span>
   </div>
 
   <div class="col-md-2 text-center hidden-xs hidden-sm" ng-if="!me.pk">
-    <span style="cursor:pointer;font-size:17px;padding-right:10px" ng-click="loginPage()"> Login <i class="fa fa-user fa-lg"></i></span>
-    <span style="cursor:pointer;font-size:17px" ng-click="registerPage()"> Register <i class="fa fa-registered fa-lg"></i></span>
+    <span style="cursor:pointer;font-size:17px;padding-right:10px;color:rgb(24, 89, 46)" ng-click="loginPage()"> Login <i class="fa fa-user fa-lg"></i></span>
+    <span style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" ng-click="registerPage()"> Register <i class="fa fa-registered fa-lg"></i></span>
 
 
   </div>
   <!-- <span ng-click="loginPage()"> <i class="fa fa-sign-in"></i> Login</span> -->
   <div class="col-xs-9 text-right hidden-md hidden-lg" ng-if="!me.pk">
-    <span style="cursor:pointer;font-size:17px;padding-right:10px" ng-click="loginPage()"> Login <i class="fa fa-user fa-lg"></i></span>
-    <span style="cursor:pointer;font-size:17px" ng-click="registerPage()"> Register <i class="fa fa-registered fa-lg"></i></span>
+    <span style="cursor:pointer;font-size:17px;padding-right:10px;color:rgb(24, 89, 46)" ng-click="loginPage()"> Login <i class="fa fa-user fa-lg"></i></span>
+    <span style="cursor:pointer;font-size:17px;color:rgb(24, 89, 46)" ng-click="registerPage()"> Register <i class="fa fa-registered fa-lg"></i></span>
   </div>
 
-  <div class="col-xs-offset-3 col-xs-3 text-center hidden-lg hidden-md" ng-if="me.pk" style="padding-top: 10px;">
+  <div class="col-xs-offset-3 col-xs-3 text-center hidden-lg hidden-md" ng-if="me.pk" style="padding-top: 10px;color:rgb(24, 89, 46)">
     <span ng-click="$state.go('account.cart')" style="cursor:pointer" >  Cart <i class="fa fa-shopping-cart fa-lg"></i></span>
   </div>
 
   <div class="col-xs-1 text-center dropdown hidden-lg hidden-md " style="padding-top: 10px;">
-    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer" ng-if="me.pk" > {{me.first_name}}</span>
+    <span class="dropdown-toggle" data-toggle="dropdown" style="cursor:pointer;color:rgb(24, 89, 46)" ng-if="me.pk" > {{me.first_name}}</span>
     <ul class="dropdown-menu " style="margin-right:0px;padding-top:0px; left:-80px;">
       <li> <img ng-src="{{me.pk | getDP}}" style="width: 170px;" alt=""> </li>
-      <li><a ui-sref="account.orders" >Orders</a></li>
-      <li><a ui-sref="account">Account</a></li>
-      <li><a href="" ng-click="logoutPage()">Logout</a></li>
+      <li><a ui-sref="account.orders" style="color:rgb(24, 89, 46)" >Orders</a></li>
+      <li><a ui-sref="account" style="color:rgb(24, 89, 46)">Account</a></li>
+      <li><a href="" ng-click="logoutPage()" style="color:rgb(24, 89, 46)">Logout</a></li>
       <!-- <li><a href="/logout">Logout</a></li> -->
     </ul>
   </div>
@@ -61,7 +61,7 @@
 <div class="row bg-blue ecomNav hidden-lg hidden-md " style="width:100%" >
   <div class="col-xs-12" style="padding-right:0px; padding-left:0px;">
     <!-- <input type="text" class="" style="width:100%;color: #000;text-indent: 10px;outline: none;" placeholder="Search for products, brands and more.."> -->
-    <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="Search 200 Products in Grains, Rice & Dry Fruits..">
+    <input type="text" style="width:100%;color: #000;text-indent: 10px;outline: none;color:rgb(24, 89, 46)" ng-model="searchProduct.product" uib-typeahead="p as p.name for p in genericProductSearch($viewValue)" placeholder="Search 200 Products in Grains, Rice & Dry Fruits..">
   </div>
   <!-- <div class="col-xs-2 text-center" style="padding:0px;">
     <div style="width:100%;height:29px;padding-top:3px;background-color:#e2e2e2;color:grey; cursor:pointer;" ng-click="search()">
@@ -125,7 +125,7 @@
         <div class="col-md-12 col-sm-12" style="padding-left:0px">
       <div class="form-group">
         <label> Email</label>
-        <input type="email" ng-model="feedback.email" class="form-control" placeholder="Enter your email address">
+        <input type="email" ng-model="feedback.email" class="form-control" placeholder="Enter your email address" >
       </div>
     </div>
     <div class="row">
