--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -131,9 +131,9 @@
     </div>
   </div>
   <div class="col-xs-offset-1 col-sm-offset-1 col-xs-10 col-sm-10 hidden-lg hidden-md" style="padding-right:20px;padding-left:20px" >
-    <div class="row" ng-if="subSlideMobile.length > 0">
+    <div class="row" ng-if="subSlideMobile.banners.length > 0">
       <div ng-if="$state.is('ecommerce')" style="position:relative;height:45vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;padding-left:0px;padding-right:0px" class="card col-sm-12 col-xs-12 hidden-md hidden-lg">
-        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh" ng-if="$index == subSlideMobile.active" ng-repeat="b in subSlideMobile.banners" ng-src="{{b.imagePortrait}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"
+        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh"  ng-src="{{subSlideMobile.img}}" ng-click="$state.go('pages' , {title : subSlideMobile.title.split(' ').join('-').toLowerCase()})"
         />
       </div>
     </div>
