--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.field.item.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.field.item.html
@@ -11,8 +11,15 @@
       <strong>Choices : </strong> {{data.data.length > 0 ? data.data : 'None'}}<br>
     </div>
     <div class="row" style="margin:10px 15px;margin-bottom:5px">
+      <div class="col-md-4">
       <i class="fa fa-pencil fa-lg" style="cursor:pointer" ng-click="rowActionClicked('edit',data)"></i>
+    </div>
+      <div class="col-md-4 text-center">
+        <i class="fa fa-trash fa-lg" style="cursor:pointer" mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"></i>
+      </div>
+        <div class="col-md-4">
       <i class="fa fa-info fa-lg pull-right" style="cursor:pointer" ng-click="rowActionClicked('info')"></i>
+    </div>
     </div>
   </div>
 </div>
