--- a/ecommerce/static/ngTemplates/app.ecommerce.vendors.pages.items.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendors.pages.items.html
@@ -8,11 +8,15 @@
       </div>
     </div>
     <div class="row container-fluid" style="padding:10px;">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <span style="cursor:pointer;" ng-click="rowActionClicked('edit')">
           <i class="fa fa-pencil fa-lg"></i></span>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4 text-center" >
+          <span style="cursor:pointer;" mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default" class="text-center">
+          <i class="fa fa-trash fa-lg"></i></span>
+        </div>
+        <div class="col-md-4">
           <span class="pull-right" style="cursor:pointer;">
         <i class="fa fa-info-circle fa-lg" ng-click="rowActionClicked('info')"></i>
       </span>
