--- a/ecommerce/static/ngTemplates/app.ecommerce.categories.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.categories.html
@@ -1,4 +1,19 @@
 <div class="container-fluid">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px;margin-bottom:0px;padding-left:15px">
+      <li class="breadcrumb-item" ng-repeat="b in breadcrumbList"><a style="cursor:pointer" ng-click="$state.go('categories', {name : b})">{{b}}</a></li>
+      <li class="breadcrumb-item active" aria-current="page">{{category.name}}</li>
+    </ol>
+  </nav>
+  <div class="row">
+  <div class="col-md-12  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="padding-right:0px;padding-left:0px;">
+    <img style="width: 100%; height:250px;" class="img" ng-src="{{category.bannerImage}}">
+</div>
+<div class="col-xs-12 col-sm-12 hidden-md hidden-lg  anim-in-out anim-zoom-out" style="padding-left:0px;padding-right:0px">
+  <img style="width: 100%; height:250px;" class="img" ng-src="{{category.visual}}">
+</div>
+  </div>
+
   <div class="col-md-2 hidden-sm hidden-xs  card bg-white " style="margin-left:15px;margin-right:15px;" ng-if="showFilter==true">
     <div class="row" style="padding-top:40px; ">
       <div class="container-fluid ">
@@ -135,7 +150,7 @@
   </div>
 
 
-  <div class="col-md-7 card bg-white" style="padding-top:0px;margin-left:15px;margin-right:15px;">
+  <div class="col-md-7 card bg-white" style="padding-top:15px;margin-left:15px;margin-right:15px;" ng-if="showFilter==true">
 
     <!-- <div class="row hidden-lg hidden-md">
 
@@ -187,22 +202,7 @@
 
 
 
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px;margin-bottom:0px">
-        <li class="breadcrumb-item" ng-repeat="b in breadcrumbList"><a style="cursor:pointer" ng-click="$state.go('categories', {name : b})">{{b}}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{{category.name}}</li>
-      </ol>
-    </nav>
     <div class="row">
-    <div class="col-md-12  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="margin-bottom:15px;padding-right:0px;padding-left:0px;">
-      <img style="width: 100%; height:250px;" class="img" ng-src="{{category.bannerImage}}">
-  </div>
-  <div class="row">
-  <div class="col-xs-12 col-sm-12 hidden-md hidden-lg  anim-in-out anim-zoom-out">
-    <img style="width: 100%; height:250px;" class="img" ng-src="{{category.visual}}">
-</div>
-    </div>
-
 
     <div class="row" style="padding-right:15px;padding-left:15px;">
       <div ng-if="listingSearch.length>0">
@@ -289,6 +289,147 @@
 
   </div>
 </div>
+<div class="col-md-9 card bg-white" style="padding-top:15px;margin-left:20px;margin-right:20px;" ng-if="showFilter==false">
+
+  <!-- <div class="row hidden-lg hidden-md">
+
+    <div class="col-xs-4" >
+      <div class="row" ng-repeat="f in category.fields" style="padding-top:20px;">
+        <span style="cursor:pointer;" >  {{f.name}} </span>
+      </div>
+    </div>
+    <div class="col-xs-8">
+      <div class="row" style="height:30px;">
+      </div>
+    </div>
+
+
+
+    <div class="col-xs-12 col-sm-6" ng-repeat="f in category.fields" style="padding-bottom:20px;">
+      <span ng-if="f.fieldType=='boolean'">
+         <input type="checkbox" ng-model="f.val" > {{f.name}}
+      </span>
+      <span ng-if="f.fieldType=='choice'">
+        <span><b>Select {{f.name}}</b></span>
+      <div class="checkbox" ng-repeat="c in f.data track by $index">
+        <label><input type="checkbox" ng-model='c.selected'  >{{c.name}}</label>
+      </div>
+      </span>
+      <span ng-if="f.fieldType=='char'">
+        <span><b>Enter {{f.name}}</b></span> <br>
+      <input type="text" name="" value="" ng-model="f.val">
+      </span>
+      <span ng-if="f.fieldType=='float'">
+        <span><b>Enter {{f.name}}</b></span> <br>
+      <input type="text" name="" value="" ng-model="f.val">
+      </span>
+      <span ng-if="f.fieldType=='date'">
+        <span><b>Select {{f.name}}</b></span> <br>
+      <div class="input-group" style="margin-top:35px;">
+        <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="f.val" is-open="status.opened" />
+        <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+      </div>
+      </span>
+    </div>
+
+
+
+  </div> -->
+
+
+
+
+
+  <div class="row">
+
+
+  <div class="row" style="padding-right:15px;padding-left:15px;">
+    <div ng-if="listingSearch.length>0">
+      <div ng-repeat="l in listingSearch">
+        <div class="col-md-3  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="margin-bottom:15px;">
+          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
+            <div class="row">
+              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
+              <img style="width: 90%; height:120px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
+              <img style="width: 90%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files.length==0">
+            </div>
+            </div>
+            <div class="row">
+              <div class=" card bg-white" style="padding-bottom:0px;">
+                <div class="row container-fluid" style="padding:10px 20px; ">
+                  <h5 ng-if="l.product.name.length>28" style="margin:0px;  height:50px;padding-left:10px">{{l.product.name.slice(0,28)}}...</h5>
+                  <h5 ng-if="l.product.name.length<=28" style="margin:0px;  height:50px;padding-left:10px">{{l.product.name}}</h5>
+                  <span style="font-size:15px;padding-left:10px"> Price : </span>
+                  <span  style="font-size:15px; padding-left:10px; ">
+                    <span ng-if="l.product.discount>0" class="text-muted" >
+                      <strike><i class="fa fa-inr"></i>{{l.product.price}}</strike>
+                    </span>
+                  <span ng-if="l.product.discount==0">
+                      <i class="fa fa-inr"></i>{{l.product.price}}
+                    </span>
+                  </span>
+
+                  <span ng-if="l.product.discount>0" style="font-size:15px;">
+                  <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-xs-12 col-sm-6 hidden-lg hidden-md anim-in-out anim-zoom-out" style="margin-bottom:15px;">
+          <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
+            <div class="row">
+              <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
+              <img style="width:70%;height:120px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
+              <img style="width:70%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files.length==0">
+            </div>
+            </div>
+            <div class="row">
+              <div class=" card bg-white" style="padding-bottom:0px;">
+                <div class="row container-fluid" style="padding:10px 20px; ">
+                  <h5 ng-if="l.product.name.length>28" style="margin:0px;  height:50px;padding-left:5px">{{l.product.name.slice(0,28)}}...</h5>
+                  <h5 ng-if="l.product.name.length<=28" style="margin:0px;  height:50px;padding-left:5px">{{l.product.name}}</h5>
+                  <span style="font-size:15px;padding-left:5px"> Price : </span>
+                  <span  style="font-size:15px; padding-left:10px; ">
+                    <span ng-if="l.product.discount>0" class="text-muted" >
+                      <strike><i class="fa fa-inr"></i>{{l.product.price}}</strike>
+                    </span>
+                  <span ng-if="l.product.discount==0">
+                      <i class="fa fa-inr"></i>{{l.product.price}}
+                    </span>
+                  </span>
+
+                  <span ng-if="l.product.discount>0"  style="font-size:15px;">
+                  <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+    <!-- <div ng-if="listingSearch.length>0">
+      <img style="width: 90%; height:120px;" class="img" src="/static/images/loading.gif"> -->
+      <!-- <h2 class="text-center text-muted">No Products</h2> -->
+    <!-- </div> -->
+
+    <div class="text-center" ng-if="listingSearch.length==0">
+        <img style="width: 50%; height:70vh;" class="img" src="/static/images/loading.gif">
+      <h2 class="text-center text-muted">No Products</h2>
+    </div>
+  </div>
+
+</div>
+</div>
 
 <div class="col-md-2 hidden-xs hidden-sm" style="margin-left:20px;margin-right:20px;" ng-if="showFilter==true">
   <div  class="row card bg-white ">
@@ -314,7 +455,7 @@
   </div>
 </div>
 <div class="col-sm-12 col-xs-12 hidden-lg hidden-md" style="margin-top:20px">
-  <div  class="row card bg-white"style="width:100%">
+  <div  class="row card bg-white"style="width:100%;margin-left: 1px;">
     <h4 class=" text-center" >Other Categories</h4>
     <div ng-repeat="r in categories" style="padding:0px;">
       <div class="col-sm-12 col-xs-12 hidden-lg hidden-md anim-in-out anim-zoom-out">
