--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -2,7 +2,7 @@
 
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-right:40px;padding-left:40px;padding-top:0px;padding-bottom:20px">
     <div style="padding:10px;" class="row card bg-white">
-      <h4>Featured Categories</h4>
+      <h4>Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px;">
         <div class="col-md-3 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
@@ -23,7 +23,7 @@
 
   <div class="col-xs-12 col-sm-12 hidden-md hidden-lg" style="padding:40px;">
     <div style="padding:10px;" class="row card bg-white">
-      <h4>Featured Categories</h4>
+      <h4>Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px; ">
         <div class="col-xs-12 col-sm-6">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : g.name})">
