--- a/ecommerce/static/ngTemplates/app.ecommerce.categories.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.categories.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
-  <nav aria-label="breadcrumb">
+  <!-- <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px;margin-bottom:0px;padding-left:15px">
       <li class="breadcrumb-item" ng-repeat="b in breadcrumbList"><a style="cursor:pointer" ng-click="$state.go('categories', {name : b})">{{b}}</a></li>
       <li class="breadcrumb-item active" aria-current="page">{{category.name}}</li>
     </ol>
-  </nav>
+  </nav> -->
   <div class="row">
-  <div class="col-md-12  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="padding-right:0px;padding-left:0px;">
-    <img style="width: 100%; height:250px;" class="img" ng-src="{{category.bannerImage}}">
+  <div class="col-md-12  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="padding-right:0px;padding-left:0px;margin-bottom:20px">
+    <img style="width: 100%; height:40vh;" class="img" ng-src="{{category.bannerImage}}">
 </div>
-<div class="col-xs-12 col-sm-12 hidden-md hidden-lg  anim-in-out anim-zoom-out" style="padding-left:0px;padding-right:0px">
+<div class="col-xs-12 col-sm-12 hidden-md hidden-lg  anim-in-out anim-zoom-out" style="padding-left:0px;padding-right:0px;margin-bottom:20px">
   <img style="width: 100%; height:250px;" class="img" ng-src="{{category.visual}}">
 </div>
   </div>
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="col-md-2 hidden-xs hidden-sm" style="margin-left:20px;margin-right:20px;" ng-if="showFilter==false">
+  <div class="col-md-2 hidden-xs hidden-sm" style="margin-left:20px;margin-right:20px" ng-if="showFilter==false">
     <div  class="row card bg-white ">
       <h4 class="text-center">Other Categories</h4>
       <div ng-repeat="r in categories" style="padding:0px;">
@@ -76,8 +76,8 @@
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : r.name})">
             <div class="row">
                 <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width: 100%; height:200px;" class="img" ng-src="{{r.visual}}" >
-              <img style="width: 100%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
+              <img style="width: 100%; height:120px;" class="img" ng-src="{{r.visual}}" >
+              <img style="width: 100%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
             </div>
           </div>
             <div class="row container-fluid" style="padding:0px;margin-bottom:10px">
@@ -201,8 +201,8 @@
 
 
 
-
-    <div class="row">
+<!--
+    <div class="row"> -->
 
     <div class="row" style="padding-right:15px;padding-left:15px;">
       <div ng-if="listingSearch.length>0">
@@ -287,7 +287,7 @@
       </div>
     </div>
 
-  </div>
+  <!-- </div> -->
 </div>
 <div class="col-md-9 card bg-white" style="padding-top:15px;margin-left:20px;margin-right:20px;" ng-if="showFilter==false">
 
@@ -342,7 +342,7 @@
 
 
 
-  <div class="row">
+  <!-- <div class="row"> -->
 
 
   <div class="row" style="padding-right:15px;padding-left:15px;">
@@ -415,7 +415,7 @@
 
 
 
-      </div>
+      <!-- </div> -->
     </div>
     <!-- <div ng-if="listingSearch.length>0">
       <img style="width: 90%; height:120px;" class="img" src="/static/images/loading.gif"> -->
@@ -439,8 +439,8 @@
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : r.name})">
           <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-            <img style="width: 100%; height:200px;" class="img" ng-src="{{r.visual}}" >
-            <img style="width: 100%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
+            <img style="width: 100%; height:120px;" class="img" ng-src="{{r.visual}}" >
+            <img style="width: 100%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
           </div>
         </div>
           <div class="row container-fluid" style="padding:0px;margin-bottom:10px">
@@ -462,8 +462,8 @@
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : r.name})">
           <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-            <img style="width: 100%; height:200px;" class="img" ng-src="{{r.visual}}" >
-            <img style="width: 100%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
+            <img style="width: 100%; height:120px;" class="img" ng-src="{{r.visual}}" >
+            <img style="width: 100%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
           </div>
         </div>
           <div class="row container-fluid" style="padding:0px;margin-bottom:10px">
