--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -100,6 +100,7 @@
     <div class="col-md-3 text-center">
       <strong style="font-size:15px;color:rgb(24, 89, 46)">STERLING SELECT</strong><br>
       <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="feedbackstatus()">Feedback</span><br>
       <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
       <!-- <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br> -->
       <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
@@ -155,6 +156,7 @@
     <div class="col-xs-6 text-center">
       <strong style="font-size:12px;color:rgb(24, 89, 46)">STERLING SELECT</strong><br>
       <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="feedbackstatus()">Feedback</span><br>
       <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
       <!-- <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br> -->
       <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
