--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -74,7 +74,7 @@
 
 
 <div ng-if="$state.is('ecommerce')" style="position:relative;height:60vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;background-size:cover;" class="card hidden-xs hidden-sm">
-  <img  style="width:100%;cursor:pointer;height:56vh;background-attachment: fixed;background-position: center; background-size: cover;background-repeat: no-repeat;" ng-repeat="b in slide.banners" ng-if="$index == slide.active" ng-src="{{b.image}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
+  <img style="width:100%;cursor:pointer;height:56vh;background-attachment: fixed;background-position: center;" ng-repeat="b in slide.banners" ng-if="$index == slide.active" ng-src="{{b.image}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
   <div class="row" style="background-color:#525252;position:absolute;bottom:0px;width:100%; height:4vh;margin:0px;">
     <ul style="padding:0px;">
       <li ng-click="changeSlide($index)" ng-init="onHover = False;" ng-mouseenter="onHover = true;" ng-mouseleave="onHover = false;" style="display:inline-block;min-width:{{100/slide.banners.length}}%;height:60px;cursor:pointer;" ng-repeat="s in slide.banners track by $index" class="text-center {{($index == slide.active || onHover) ? 'activeSlideTab' : ''}}">
@@ -87,7 +87,7 @@
 </div>
 
 
-<div ng-if="$state.is('ecommerce')" style="position:relative;height:50vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;background-attachment: fixed;background-position: center; background-size: cover;background-repeat: no-repeat;" class="card hidden-md hidden-lg">
+<div ng-if="$state.is('ecommerce')" style="position:relative;height:50vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
   <img class="anim-in-out" data-anim-speed="100" style="width:100%;cursor:pointer;height:44vh" ng-if="$index == slideMobile.active" ng-repeat="b in slideMobile.banners" ng-src="{{b.imagePortrait}}" ng-click="$state.go('pages' , {title : b.title.split(' ').join('-').toLowerCase()})"/>
 
 <!-- <div ng-if="$state.is('ecommerce')" style="position:relative;height:88vh ;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;" class="card hidden-md hidden-lg">
@@ -106,8 +106,8 @@
 
 
 
-<div ng-init="showFeedback=false;" class="bg-white card" style="position:fixed; top:35vh;right:{{!showFeedback ? '-350' : '0'}}px;transition:right 0.1s linear;
-  width:350px;height:460px; z-index:10;border-left:solid 5px #136ab1;">
+<div ng-init="showFeedback=false;" class="bg-white card" style="position:fixed; top:35vh;right:{{!showFeedback ? '0' : '0'}}px;transition:right 0.1s linear;
+  width:350px;height:460px; z-index:10;border-left:solid 5px #136ab1;" ng-if="feddbackPannel">
   <div style="position:absolute;right:290px;width:150px;height:32px;top:100px;background-color:#136ab1;cursor:pointer;
     transform: rotate(-90deg);border-radius : 6px 6px 0px 0px; padding-right:20px;padding-left:20px;" ng-click="showFeedback = !showFeedback;">
     <span style="font-size:18px;color:white;letter-spacing: 3px;">Feedback
@@ -151,7 +151,7 @@
         <button type="button" class="btn btn-success" ng-click="sendFeedback()">
           Send
         </button>
-        <button type="button" class="btn btn-default" ng-click="showFeedback=false;">
+        <button type="button" class="btn btn-default" ng-click="close()">
           Cancel
         </button>
       </div>
