--- a/patients/static/ngTemplates/app.activePatients.explore.html
+++ b/patients/static/ngTemplates/app.activePatients.explore.html
@@ -30,7 +30,7 @@
               <div class="text-center">
                 <span ng-if="data.mlc">Medical Legal Case <br></span>
                 <span ng-if="data.insurance">Insurance <br></span>
-                <span ng-if="data.cash">Cash <br></span> 
+                <span ng-if="data.cash">Cash <br></span>
               </div>
             </div>
             <hr>
@@ -271,7 +271,7 @@
         </div>
         <div class="row" style="padding:0px 15px;">
           <div class="form-group">
-            <label>Final Diagnosis at the time of Admission.</label>
+            <label>Final Diagnosis at the time of Discharge.</label>
             <!-- <input type="text" class="form-control" ng-model="dischargeSummForm.finalDiagnosis" placeholder=""> -->
             <textarea ui-tinymce="tinymceOptionsSmall" ng-model="dischargeSummForm.finalDiagnosis"></textarea>
           </div>
