--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -75,6 +75,24 @@
             </div>
           </div>
         </div>
+        <div class="row" style="padding:10px;" ng-if="me == null">
+          <div class="col-md-6">
+            <div class="row container-fluid text-center" style="background-color:#ec1616; color:white; padding:5px 0px;">
+              <span ng-click="loginPage()" style="cursor:pointer;">
+                <span style="font-size:15px;"><b> Buy Now </b></span>
+              <i class="fa fa-bolt fa-2x"></i>
+              </span>
+            </div>
+          </div>
+          <div class="col-md-6 ">
+            <div class="row container-fluid text-center" style="background-color:#164cec; color:white; padding:5px 0px;">
+              <span ng-click="loginPage()" style="cursor:pointer;">
+                  <span style="font-size:15px;"><b> Add To Cart </b></span>
+              <i class="fa fa-shopping-cart fa-2x"></i>
+              </span>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
