--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -77,7 +77,7 @@
 
       <div class="form-group">
         <label>Discount Offered</label>
-        <span class="text-muted" >(in %)</span>
+        <span class="text-muted">(in %)</span>
         <input type="number" class="form-control" min="0" ng-model="product.discount">
       </div>
 
@@ -105,7 +105,7 @@
       <div class="row" ng-if="product.pk" style="padding:5px 20px">
 
         <label>Secondary SKU</label>
-        <div class="row" >
+        <div class="row">
           <div class="col-md-8">
             <div class="form-group">
               <input type="text" class="form-control" ng-model="productVerientForm.sku">
@@ -132,13 +132,50 @@
                 <!-- <a href="{{data.attachment}}" target="_blank" class="btn btn-primary pull-right" > <i class="fa fa-download" ></i></a> -->
                 <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
                   style="padding-bottom: 9px;"> <i class="fa fa-trash fa-lg"></i> </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row" ng-if="multiStores">
+        <div class="col-md-12">
+          <label>Store</label>
+          <div class="row">
+            <div class="col-md-8">
+              <div class="form-group">
+                <input type="text" ng-model="storeDetail.store" class="form-control" uib-typeahead="s as s.name for s in storeStore($viewValue)" placeholder="Search and select">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="input-group">
+                <input type="text" class="form-control" ng-model="storeDetail.quantity" placeholder="No. of products">
+
+                <div class="input-group-btn">
+                  <button type="button" class="btn btn-primary" ng-click="savestore()">Add</button>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="row" style="margin-top: 30px;padding:5px 20px">
+            <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top:15px;" ng-repeat="c in storeData">
+              <div class="row" style="padding:15px">
+                <div class="col-md-11">
+                  <span><strong>Name : </strong> {{c}}</span><br/><br/>
+                  <span><strong>Quantity : </strong> {{c.quantity}}</span>
+                </div>
+                <!-- <div class="col-md-1">
+                  <i class="fa fa-pencil fa-lg" ng-click="editCategories($index)" style="cursor:pointer"></i>
+                  <i class="fa fa-trash fa-lg" ng-click="removeCategories($index)" style="cursor:pointer;margin-top:30px"></i>
+                </div> -->
+                <!-- <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
+                style="padding-bottom: 9px;"> <i class="fa fa-trash"></i> </button> -->
+              </div>
+            </div>
+          </div>
         </div>
+
       </div>
-
-
     </div>
 
     <div class="col-md-4" ng-if="product.pk">
@@ -148,7 +185,7 @@
           <input type="text" ng-model="categoryForm.category" class="form-control" uib-typeahead="c as c.name for c in categorySearch($viewValue)" placeholder="Search and select">
         </div>
         <div class="col-md-3">
-          <input type="number" ng-model="categoryForm.qty" class="form-control" >
+          <input type="number" ng-model="categoryForm.qty" class="form-control">
         </div>
         <div class="col-md-2">
           <button type="button" class="btn btn-primary" ng-click="addCategories()">Add <i class="fa fa-plus"></i></button>
