--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -29,7 +29,7 @@
               <a>
                 <div class="row" style="cursor:pointer" >
                   <div class="container-fluid">
-                    <div class="col-md-12">
+                    <div class="col-md-10">
                       <div class="row">
                         <span> {{x.uid.split("$")[1]}}</span>
                       </div>
@@ -37,6 +37,9 @@
                         <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i>  <span ng-if="x.name.length>0" >{{x.name}}</span> <span ng-if="x.name.length==0" >{{x.uid}}</span>
                         <span ng-if="!x.boxOpen && x.unreadMsg>0" >( {{x.unreadMsg}} )</span>
                       </div>
+                    </div>
+                    <div class="col-md-2">
+                      <i ng-if="!x.isOnline" class="fa fa-times fa-lg" ng-click="myUsers.splice($index,1)"></i>
                     </div>
                   </div>
                 </div>
