--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -158,18 +158,18 @@
             </div>
           </div>
           <div class="row" style="margin-top: 30px;padding:5px 20px">
-            <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top:15px;" ng-repeat="c in storeData">
+            <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top:15px;" ng-repeat="c in product.storeQty">
               <div class="row" style="padding:15px">
                 <div class="col-md-11">
-                  <span><strong>Name : </strong> {{c}}</span><br/><br/>
+                  <span><strong>Name : </strong> {{c.store.name}}</span><br/><br/>
                   <span><strong>Quantity : </strong> {{c.quantity}}</span>
                 </div>
                 <!-- <div class="col-md-1">
                   <i class="fa fa-pencil fa-lg" ng-click="editCategories($index)" style="cursor:pointer"></i>
                   <i class="fa fa-trash fa-lg" ng-click="removeCategories($index)" style="cursor:pointer;margin-top:30px"></i>
                 </div> -->
-                <!-- <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
-                style="padding-bottom: 9px;"> <i class="fa fa-trash"></i> </button> -->
+                <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
+                style="padding-bottom: 9px;margin-top:16px;margin-right:12px"> <i class="fa fa-trash fa-lg"></i> </button>
               </div>
             </div>
           </div>
