--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -1,5 +1,4 @@
 <div class="row" style="margin:0px;">
-
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-right:40px;padding-left:40px;padding-top:0px;padding-bottom:20px">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Categories</h4>
@@ -48,7 +47,8 @@
 
 <div class="row" style="margin-top:20px;margin:0px;">
   <div class="col-md-8 col-md-offset-2 hidden-xs hidden-sm">
-    <div ng-repeat="l in listingProducts">
+    <product-card list="listingProducts"></product-card>
+    <!-- <div ng-repeat="l in listingProducts">
       <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
           <div class="row" class="text-center">
@@ -81,11 +81,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div class="col-xs-12 hidden-md hidden-lg">
-    <div ng-repeat="l in listingProducts">
+    <product-card list="listingProducts"></product-card>
+    <!-- <div ng-repeat="l in listingProducts">
       <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
           <div class="row">
@@ -118,7 +119,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 <div class="row">
@@ -148,7 +149,8 @@
 
 <div class="row" style="margin-top:20px;margin:0px;">
   <div class="col-md-8 col-md-offset-2 hidden-xs hidden-sm">
-    <div ng-repeat="l in listingRemainingProducts">
+    <product-card list="listingRemainingProducts"></product-card>
+    <!-- <div ng-repeat="l in listingRemainingProducts">
       <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
           <div class="row" class="text-center">
@@ -181,11 +183,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div class="col-xs-12 hidden-md hidden-lg">
-    <div ng-repeat="l in listingRemainingProducts">
+      <product-card list="listingRemainingProducts"></product-card>
+    <!-- <div ng-repeat="l in listingRemainingProducts">
       <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
           <div class="row">
@@ -218,7 +221,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
@@ -230,7 +233,8 @@
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding:40px; padding-top:0px;">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Recently Viewed</h4>
-      <div ng-repeat="r in recentlyViewed" style="padding:0px;">
+      <product-card list="recentlyViewed"></product-card>
+      <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
         <div class="col-md-3 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
             <div class="row">
@@ -259,7 +263,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -267,7 +271,8 @@
   <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Recently Viewed</h4>
-      <div ng-repeat="r in recentlyViewed" style="padding:0px;">
+      <product-card list="recentlyViewed"></product-card>
+      <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
         <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
             <div class="row">
@@ -296,7 +301,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
