--- a/support/static/ngTemplates/app.support.chatTransfer.modal.html
+++ b/support/static/ngTemplates/app.support.chatTransfer.modal.html
@@ -11,13 +11,13 @@
     <hr>
     <div class="row" style="padding:10px 20px">
       <div class="row">
-        <div class="col-md-2 well text-center" ng-repeat="on in onlineAgents" style="background-color:#{{agentPk==on?'e3c95a':'74cf8c'}}; margin-bottom:15px;cursor:pointer;" ng-click="selectedAgent(on);">
+        <div class="col-md-2 well text-center" ng-repeat="on in onlineAgents" style="background-color:#{{agentPk==on?'e3c95a':'74cf8c'}}; margin-bottom:15px;cursor:pointer; padding:10px;" ng-click="selectedAgent(on);">
           {{on | getName}}
         </div>
       </div>
       <hr>
       <div class="row">
-        <div class="col-md-2 well text-center" ng-repeat="off in offlineAgents" style="background-color:#{{agentPk==off?'e3c95a':'c86161'}}; margin-bottom:15px;cursor:pointer;" ng-click="selectedAgent(off)">{{off | getName}}
+        <div class="col-md-2 well text-center" ng-repeat="off in offlineAgents" style="background-color:#{{agentPk==off?'e3c95a':'c86161'}}; margin-bottom:15px;cursor:pointer; padding:10px;" ng-click="selectedAgent(off)">{{off | getName}}
         </div>
       </div>
     </div>
