--- a/ecommerce/static/ngTemplates/app.ecommerce.categories.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.categories.html
@@ -1,3 +1,4 @@
+
 <div class="container-fluid">
   <!-- <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin-left:-15px;margin-right:-15px;margin-bottom:0px;padding-left:15px">
@@ -206,7 +207,15 @@
 
     <div class="row" style="padding-right:15px;padding-left:15px;">
       <div ng-if="listingSearch.length>0">
-        <product-card list="listingSearch"></product-card>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row" >
+              <div class="col-md-3" ng-repeat=" l in listingSearch">
+                <product-card list="l" add-cart="addToCart"></product-card>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- <div ng-repeat="l in listingSearch">
           <div class="col-md-3  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="margin-bottom:15px;">
             <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
@@ -348,7 +357,15 @@
 
   <div class="row" style="padding-right:15px;padding-left:15px;">
     <div ng-if="listingSearch.length>0">
-      <product-card list="listingSearch"></product-card>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row" >
+            <div class="col-md-3" ng-repeat=" l in listingSearch">
+              <product-card list="l" add-cart="addToCart"></product-card>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- <div ng-repeat="l in listingSearch"> -->
         <!-- <div class="col-md-3  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="margin-bottom:15px;">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
