--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -278,7 +278,15 @@
     <div class="row" style="margin:0px;" ng-if="me != null">
       <div class=" col-md-10 hidden-xs hidden-sm" style="padding:40px; padding-top:0px;width:100%">
           <h4>Suggested Products</h4>
-            <product-card list="suggest"></product-card>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="row" >
+                <div class="col-md-3" ng-repeat=" l in suggest">
+                  <product-card list="l" add-cart="addToCart"></product-card>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- <div ng-repeat="r in suggest" style="padding:0px;">
             <div class="col-md-3 anim-in-out anim-zoom-out">
               <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.pk,name:r.product.name.split(' ').join('-')})">
@@ -315,7 +323,11 @@
       <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
         <!-- <div style="padding:10px;" class="row card bg-white"> -->
           <h4 class="text-center">Suggested Products</h4>
-            <product-card list="suggest"></product-card>
+          <div class="row">
+            <div class=" col-xs-12 col-sm-6" ng-repeat="l in suggest">
+              <product-card list="l" add-cart="addToCart"></product-card>
+            </div>
+          </div>
           <!-- <div ng-repeat="r in suggest" style="padding:0px;">
             <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px">
               <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.pk,name:r.product.name.split(' ').join('-')})">
@@ -354,8 +366,13 @@
 
   <div class="col-md-2 hidden-xs hidden-sm" style="margin-left:15px; position:sticky; top:10px; " ng-if="me != null">
     <h4>Recently Viewed</h4>
+    <div class="row">
+      <div class="col-md-12">
+            <product-card list="recentlyViewed.product" add-cart="addToCart"></product-card>
+      </div>
+    </div>
       <!-- <product-card list="recentlyViewed"></product-card> -->
-    <div style="padding:10px;" class="row card bg-white">
+    <!-- <div style="padding:10px;" class="row card bg-white">
         <div class="col-md-12 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : recentlyViewed.product.pk,name:recentlyViewed.product.product.name.split(' ').join('-')})">
             <div class="row">
@@ -381,7 +398,7 @@
             </div>
           </div>
         </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
