--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -39,48 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="row" style="padding-top:15px">
-    <div class="col-md-12 hidden-sm hidden-xs">
-      <div class="row">
-        <div class="col-md-12">
-          <strong style="font-size:15px;padding-left:20px">Payment Methods</strong>
-        </div>
-      </div>
-      <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
-      <div class="row">
-        <div class="col-md-10 hidden-sm hidden-xs">
-          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
-        </div>
-        <div class="col-md-1 hidden-sm hidden-xs">
-            <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application"   width="100%" style="margin-top: 10px;"></a>
-        </div>
-        <div class="col-md-1 hidden-sm hidden-xs">
-          <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/applestore.png"  alt="iOS Application" ng-href="{{settings.appstoreLink}}"  width="100%" style="margin-top: 10px;"></a>
-        </div>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
-      <div class="row">
-        <div class="col-md-12">
-          <strong style="font-size:15px;padding-left:0px">Payment Methods</strong>
-        </div>
-      </div>
-      <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
-      <div class="row">
-        <div class=" col-xs-12 col-sm-12 hidden-md hidden-lg">
-          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
-        </div>
-      </div>
-          <div class="row">
-        <div class="col-sm-6 col-xs-6 hidden-md hidden-lg">
-          <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application" ng-href="{{settings.playstoreLink}}"  style="margin-top: 10px;width:20vh;height:5vh"></a>
-        </div>
-        <div class="col-sm-6 col-xs-6 hidden-md hidden-lg">
-          <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/applestore.png" alt="iOS Application" ng-href="{{settings.appstoreLink}}"  style="margin-top: 10px;width:20vh;height:5vh"></a>
-        </div>
-      </div>
-    </div>
-  </div>
+
 </div>
 <div class="container-fluid bg-white" style="position:relative; width:100%; bottom:0px; padding:20px;">
   <div class="row hidden-xs hidden-sm">
@@ -93,42 +52,53 @@
       <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/appStore.png" alt="" /></a>
     </div> -->
     <div class="col-md-3 {{settings.playstoreLink.indexOf('http')==-1 && settings.appstoreLink.indexOf('http')==-1 ? 'col-md-offset-2 col-md-offset-1' :''}}">
-      <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellations and Returns</span>
+      <img src="/static/images/sterlin_select.png" style="height:9vh;" alt="Logo"><br><br>
+      <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
+      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellations and Returns</span> -->
     </div>
-    <div class="col-md-3 text-center">
-      <strong style="font-size:15px;color:rgb(24, 89, 46)">STERLING SELECT</strong><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="feedbackstatus()">Feedback</span><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
-      <!-- <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br> -->
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
+    <div class="col-md-2 text-left">
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br>
+      <span style="cursor:pointer" ng-click="feedbackstatus()">Feedback</span><br>
+      <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br> -->
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
 
     </div>
-    <div class="col-md-3 text-right">
+    <div class="col-md-2 text-left">
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Terms & Condition'.split(' ').join('-').toLowerCase()})">Terms & Condition</span><br>
+      <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations'.split(' ').join('-').toLowerCase()})">Cancellations</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Returns'.split(' ').join('-').toLowerCase()})">Returns</span><br>
+      <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span>
+
+    </div>
+    <div class="col-md-3 text-center">
       <div class="row">
-        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
-          <i class="fa fa-square-o fa-stack-2x"></i>
+        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #125688;color: white;border-radius: 50%;">
+          <i class="fa fa-facebook fa-stack-1x"></i>
+        </a>
+        <a ng-href="{{settings.pinterestLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;">
+          <i class="fa fa-pinterest fa-stack-1x"></i>
+        </a>
+        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #55ACEE;color: white;border-radius: 50%;">
           <i class="fa fa-twitter fa-stack-1x"></i>
         </a>
-        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
-          <i class="fa fa-square-o fa-stack-2x"></i>
+        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #3B5998;color: white;border-radius: 50%;">
           <i class="fa fa-linkedin fa-stack-1x"></i>
-        </a>
-        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
-          <i class="fa fa-square-o fa-stack-2x"></i>
-          <i class="fa fa-facebook fa-stack-1x"></i>
         </a>
       </div>
       <div class="row">
+        <span style="color:rgb(24, 89, 46)">Download Our App</span>
+      </div>
+          <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application"   width="30%" style="margin-top: 10px;"></a>
+      <!-- <div class="row">
         <span style="color:rgb(24, 89, 46)">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
       </div>
       <div class="row">
         <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
         <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -147,46 +117,105 @@
       </div>
     </div> -->
 
-    <div class="col-xs-6 text-center">
-      <img src="/static/images/sterlin_select.png" style="height:7vh;" alt="Logo"><br><br>
-      <span style="cursor:pointer;font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
-      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellationa and Returns</span>
+    <div class="col-xs-5 text-center">
+      <img src="/static/images/sterlin_select.png" style="height:13vh;" alt="Logo"><br><br>
+      <!-- <span style="cursor:pointer;font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'payment'.split(' ').join('-').toLowerCase()})">Payment</span><br>
+      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Cancellations and Returns'.split(' ').join('-').toLowerCase()})">Cancellationa and Returns</span> -->
     </div>
 
-    <div class="col-xs-6 text-center">
-      <strong style="font-size:12px;color:rgb(24, 89, 46)">STERLING SELECT</strong><br>
-      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
-      <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="feedbackstatus()">Feedback</span><br>
-      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
-      <!-- <span style="cursor:pointer; font-size:12px;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br> -->
-      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br>
-      <span style="cursor:pointer; font-size:12px;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
+    <div class="col-xs-7 text-center">
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'About us'.split(' ').join('-').toLowerCase()})">About us</span> <br>
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'Contact Us'.split(' ').join('-').toLowerCase()})">Contact Us</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'careers'.split(' ').join('-').toLowerCase()})">Careers</span> <br>
+      <span style="cursor:pointer" ng-click="feedbackstatus()">Feedback</span><br>
+      <!-- <span style="cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Press'.split(' ').join('-').toLowerCase()})">Press</span><br> -->
+      <span style="cursor:pointer" ng-click="$state.go('pages' , {title : 'FAQ'.split(' ').join('-').toLowerCase()})">FAQ</span>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Terms & Condition'.split(' ').join('-').toLowerCase()})">Terms & Condition</span><br>
+      <span style="font-size:12px;" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations'.split(' ').join('-').toLowerCase()})">Cancellations</span><br>
+      <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Returns'.split(' ').join('-').toLowerCase()})">Returns</span><br>
+      <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span>
     </div>
 
     <div class="col-xs-12 text-center">
       <div class="row">
-        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
-          <i class="fa fa-twitter fa-stack-1x"></i>
-        </a>
-        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
-          <i class="fa fa-linkedin fa-stack-1x"></i>
-        </a>
-        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="color:white;cursor:pointer;color:rgb(24, 89, 46)">
+        <a ng-href="{{settings.facebookLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #125688;color: white;border-radius: 50%;">
           <i style="font-size:12px;" class="fa fa-facebook fa-stack-1x"></i>
         </a>
+        <a ng-href="{{settings.pinterestLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;">
+          <i class="fa fa-pinterest fa-stack-1x"></i>
+        </a>
+        <a ng-href="{{settings.twitterLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #55ACEE;color: white;border-radius: 50%;">
+          <i class="fa fa-twitter fa-stack-1x"></i>
+        </a>
+        <a ng-href="{{settings.linkedInLink}}" target="_blank" class="fa-stack fa-lg" style="cursor:pointer;background:  #3B5998;color: white;border-radius: 50%;">
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+        </a>
+
       </div>
-      <div class="row">
+        <div class="row">
+          <span style="color:rgb(24, 89, 46)">Download Our App</span>
+        </div>
+        <div class="row">
+        <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application"   width="10%" style="margin-top: 10px;"></a>
+      </div>
+      <!-- <div class="row">
         <span style="font-size:12px;color:rgb(24, 89, 46)">Copyright &copy; {{settings.copyrightHolder}} {{settings.copyrightYear}}</span>
       </div>
       <div class="row">
         <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span> &nbsp;
         <span style="color:white;font-size:12px;cursor:pointer;color:rgb(24, 89, 46)" ng-click="$state.go('pages' , {title : 'Terms of Use'.split(' ').join('-').toLowerCase()})">Terms of Use</span>
-      </div>
+      </div> -->
     </div>
 
 
   </div>
-
+  <hr/>
+  <div class="row">
+    <div class="col-md-2 col-md-offset-1  col-xs-12 col-sm-12 ">
+    <span style="font-size:18px;color:rgb(24, 89, 46)">POPULAR SEARCHES</span>
+    </div>
+    <div class="col-md-8 col-xs-12 col-sm-12">
+    <span><b>Idli Rice, toor Dal, Almonds, Raw Rice, Whole Wheat Atta, Maida, Ragi Flour, Uppit Sooji, Cashew, Jeera, Black Pepper & Seeds</b></span>
+    </div>
+  </div>
+  <hr/>
+  <div class="row" style="padding-top:15px">
+    <div class=" col-md-offset-1 col-md-10 hidden-sm hidden-xs">
+      <div class="row">
+        <div class="col-md-12">
+          <strong style="font-size:15px;padding-left:20px">Payment Methods</strong>
+        </div>
+      </div>
+      <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
+      <div class="row">
+        <div class="col-md-12 hidden-sm hidden-xs">
+          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-12 hidden-md hidden-lg">
+      <div class="row">
+        <div class="col-md-12">
+          <strong style="font-size:15px;padding-left:0px">Payment Methods</strong>
+        </div>
+      </div>
+      <!-- <h4><span style="padding-left:30px"></span>Payment Methods</h4> -->
+      <div class="row">
+        <div class=" col-xs-12 col-sm-12 hidden-md hidden-lg">
+          <img src="/static/images/payment-methods.svg" alt="Payment Methods" width="100%;" >
+        </div>
+      </div>
+          <!-- <div class="row">
+        <div class="col-sm-6 col-xs-6 hidden-md hidden-lg">
+          <a ng-if="settings.playstoreLink.indexOf('http')!=-1" ng-href="{{settings.playstoreLink}}"><img src="/static/images/googleplay.png" alt="Google Application" ng-href="{{settings.playstoreLink}}"  style="margin-top: 10px;width:20vh;height:5vh"></a>
+        </div>
+        <div class="col-sm-6 col-xs-6 hidden-md hidden-lg">
+          <a ng-if="settings.appstoreLink.indexOf('http')!=-1" ng-href="{{settings.appstoreLink}}"><img src="/static/images/applestore.png" alt="iOS Application" ng-href="{{settings.appstoreLink}}"  style="margin-top: 10px;width:20vh;height:5vh"></a>
+        </div>
+      </div> -->
+    </div>
+  </div>
 
 
 </div>
