--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -1,5 +1,5 @@
 <div class="row" style="margin:0px;">
-  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-right:40px;padding-left:40px;padding-top:0px;padding-bottom:20px">
+  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-right:20px;padding-left:20px;padding-top:0px;padding-bottom:20px">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Categories</h4>
       <div ng-repeat="g in genericProducts| limitTo:4" style="padding:0px;">
@@ -45,9 +45,17 @@
 
 
 
-<div class="row" style="margin-top:20px;margin:0px;">
+<div class="row" style="margin:0px">
   <div class="col-md-8 col-md-offset-2 hidden-xs hidden-sm">
-    <product-card list="listingProducts"></product-card>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row" >
+          <div class="col-md-3" ng-repeat=" l in listingProducts">
+            <product-card list="l" add-cart="addToCart" ></product-card>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- <div ng-repeat="l in listingProducts">
       <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
@@ -84,8 +92,13 @@
     </div> -->
   </div>
 
-  <div class="col-xs-12 hidden-md hidden-lg">
-    <product-card list="listingProducts"></product-card>
+  <div class="col-xs-10 col-sm-10 col-xs-offset-1  hidden-md hidden-lg">
+    <div class="row">
+      <div class=" col-xs-12 col-sm-6" ng-repeat="l in listingProducts" >
+        <product-card list="l"  add-cart="addToCart"></product-card>
+      </div>
+    </div>
+
     <!-- <div ng-repeat="l in listingProducts">
       <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
@@ -122,8 +135,8 @@
     </div> -->
   </div>
 </div>
-<div class="row">
-  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-left:42px;padding-right:65px;">
+<div class="row" style="margin:0px">
+  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-left:20px;padding-right:40px;">
     <div class="row" ng-if="subSlide.banners.length > 0">
       <div style="height:45vh;margin-bottom:20px;margin-left:10px;padding-left:0px;padding-right:0px;" class="card col-md-12 text-center  hidden-xs hidden-sm">
         <!-- <picture>
@@ -131,25 +144,32 @@
             <source media="(min-width: 100%)" srcset="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()}">
               <img src="{{subSlide.img}}" alt="Flowers" style="width:100%;" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()}">
             </picture> -->
-        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh" ng-src="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()})"
-        />
+        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh" ng-src="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()})" />
       </div>
     </div>
   </div>
-  <div class="col-xs-offset-1 col-sm-offset-1 col-xs-10 col-sm-10 hidden-lg hidden-md" style="padding-right:20px;padding-left:20px" >
+  <div class="col-xs-offset-1 col-sm-offset-1 col-xs-10 col-sm-10 hidden-lg hidden-md" style="padding-right:20px;padding-left:20px">
     <div class="row" ng-if="subSlideMobile.banners.length > 0">
       <div ng-if="$state.is('ecommerce')" style="position:relative;height:45vh;margin-bottom:20px;width:100%;display:border-box;overflow:hidden;padding-left:0px;padding-right:0px" class="card col-sm-12 col-xs-12 hidden-md hidden-lg">
-        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh"  ng-src="{{subSlideMobile.img}}" ng-click="$state.go('pages' , {title : subSlideMobile.title.split(' ').join('-').toLowerCase()})"
-        />
+        <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;height:45vh" ng-src="{{subSlideMobile.img}}" ng-click="$state.go('pages' , {title : subSlideMobile.title.split(' ').join('-').toLowerCase()})" />
       </div>
     </div>
     </iv>
   </div>
 </div>
 
-<div class="row" style="margin-top:20px;margin:0px;">
+<div class="row" style="margin:0px">
   <div class="col-md-8 col-md-offset-2 hidden-xs hidden-sm">
-    <product-card list="listingRemainingProducts"></product-card>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row" >
+          <div class="col-md-3" ng-repeat=" l in listingRemainingProducts">
+                <product-card list="l" add-cart="addToCart"></product-card>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- <div ng-repeat="l in listingRemainingProducts">
       <div class="col-md-3 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
@@ -186,8 +206,12 @@
     </div> -->
   </div>
 
-  <div class="col-xs-12 hidden-md hidden-lg">
-      <product-card list="listingRemainingProducts"></product-card>
+  <div class="col-xs-10 col-sm-10 col-xs-offset-1 hidden-md hidden-lg">
+    <div class="row">
+      <div class=" col-xs-12 col-sm-6" ng-repeat="l in listingRemainingProducts">
+        <product-card list="l" add-cart="addToCart"></product-card>
+      </div>
+    </div>
     <!-- <div ng-repeat="l in listingRemainingProducts">
       <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out" style="margin-bottom:15px;">
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : l.pk,name:l.product.name.split(' ').join('-')})">
@@ -230,10 +254,19 @@
 
 <div class="row" style="margin:0px;" ng-if="me != null">
 
-  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding:40px; padding-top:0px;">
+  <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding:20px; padding-top:0px;">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Recently Viewed</h4>
-      <product-card list="recentlyViewed"></product-card>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row" >
+            <div class="col-md-3" ng-repeat=" l in recentlyViewed">
+                  <product-card list="l" add-cart="addToCart"></product-card>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
         <div class="col-md-3 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
@@ -271,7 +304,11 @@
   <div class="col-xs-12 hidden-md hidden-lg" style="padding:40px; padding-top:0px;">
     <div style="padding:10px;" class="row card bg-white">
       <h4>Recently Viewed</h4>
-      <product-card list="recentlyViewed"></product-card>
+      <div class="row">
+        <div class=" col-xs-12 col-sm-6" ng-repeat="l in recentlyViewed">
+          <product-card list="l" add-cart="addToCart"></product-card>
+        </div>
+      </div>
       <!-- <div ng-repeat="r in recentlyViewed" style="padding:0px;">
         <div class="col-xs-12 col-sm-6 anim-in-out anim-zoom-out">
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('details' , {id : r.product.pk,name:r.product.product.name.split(' ').join('-')})">
