--- a/static_shared/ngTemplates/productCart.html
+++ b/static_shared/ngTemplates/productCart.html
@@ -1,54 +1,74 @@
-<div ng-repeat="l in list">
-  <div class="col-md-3 col-sm-6 col-xs-12   anim-in-out anim-zoom-out" style="margin-bottom:15px;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
-    <div class="container-fluid" style="cursor:pointer;" ng-click="openDetails(l.pk,l.product.name.split(' ').join('-'))" >
-      <div class="row" class="text-center">
-        <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-          <img style="width: 90%; height:200px;" class="img" ng-src="{{l.files[0].attachment}}" ng-if="l.files.length>0">
-          <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="l.files==null">
-        </div>
+<div  style="cursor:pointer;">
+  <div  ng-click="openDetails(list.pk,list.product.name.split(' ').join('-'))" style="margin-bottom:15px;margin-left:15px;margin-right:15px">
+    <div class="row" class="text-center">
+      <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
+        <img style="width: 90%; height:200px;" class="img" ng-src="{{list.files[0].attachment}}" ng-if="list.files.length>0">
+        <img style="width: 90%; height:200px;" class="img" src="/static/images/ecommerce.jpg" ng-if="list.files==null">
       </div>
-      <div class="row">
-        <div class=" card bg-white" style="padding-bottom:0px;">
-          <div class="row container-fluid" style="padding:10px 20px; " >
-            <!-- <div >
+    </div>
+    <div class="row">
+      <div class=" card bg-white" style="padding-bottom:0px;">
+        <div class="row container-fluid" style="padding:10px 20px; ">
+          <!-- <div >
             <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
             <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name}}</h5>
           </div> -->
-            <div  ng-if="!hover">
-            <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
-            <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name}}</h5>
+          <div>
+            <h5 ng-if="list.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{list.product.name.slice(0,35)}}...</h5>
+            <h5 ng-if="list.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{list.product.name}}</h5>
           </div>
-          <div  ng-if="hover" >
-            <div style="background-color:rgb(24, 89, 46); color:white; padding:10px 10px 10px 10px;margin:0px;height:60px">
-              <div class="col-md-6 col-xs-6 col-sm-6 text-center" style="border-right:1px solid #FFFFFF;">
-              <span ng-click="addToCart(l.pk)" style="cursor:pointer;" >
-              <i class="fa fa-heart  fa-2x"></i>
+          <span style="font-size:15px;padding-left:10px"> Price : </span>
+          <span style="font-size:15px;">
+              <span ng-if="list.product.discount>0" class="text-muted" >
+                <strike>   <i class="fa fa-inr"></i>{{list.product.price}}</strike>
               </span>
-            </div>
-            <div class="col-md-6 col-xs-6 col-sm-6 text-center">
-              <span ng-click="addToCart(l.pk)" style="cursor:pointer;">
-              <i class="fa fa-shopping-cart fa-2x"></i>
+          <span ng-if="list.product.discount==0">
+                 <i class="fa fa-inr"></i>{{list.product.price}}
               </span>
-            </div>
-            </div>
-          </div>
-            <span style="font-size:15px;padding-left:10px"> Price : </span>
-            <span style="font-size:15px;">
-              <span ng-if="l.product.discount>0" class="text-muted" >
-                <strike>   <i class="fa fa-inr"></i>{{l.product.price}}</strike>
-              </span>
-            <span ng-if="l.product.discount==0">
-                 <i class="fa fa-inr"></i>{{l.product.price}}
-              </span>
+          </span>
+          <span ng-if="list.product.discount>0" style="font-size:15px;">
+              <i class="fa fa-inr"></i>{{list.product.discountedPrice.toFixed(2)}}
             </span>
-            <span ng-if="l.product.discount>0" style="font-size:15px;">
-              <i class="fa fa-inr"></i>{{l.product.discountedPrice.toFixed(2)}}
-            </span>
-          </div>
+            <div>
+              <div style="color:#808080; padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart==0">
+                <div class="col-md-6 col-xs-6 col-sm-6 text-center" style="border-right:1px solid #808080;">
+                  <span ng-click="wishlist(list.pk);$event.stopPropagation();" style="cursor:pointer;">
+                    <i class="fa fa-heart  fa-3x"></i>
+                  </span>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 text-center">
+                  <span ng-click="addToCart(list.pk);$event.stopPropagation();" style="cursor:pointer;">
+                    <i class="fa fa-shopping-cart fa-3x" ></i>
+                  </span>
+                </div>
+              </div>
+              <div style="color:#808080; padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart>0">
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                  <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="data.qty>1"  ng-click="$event.stopPropagation()"></i>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                  <span style="font-size:20px; padding:0px 20px;"> {{list.added_cart}} </span>
+                </div>
+                <div class="col-md-4 col-sm-4 col-xs-4">
+                  <i class="fa fa-plus-circle fa-2x" style="cursor:pointer"  ng-click="$event.stopPropagation()"></i>
+                </div>
+                <!-- <div class="col-md-6 col-xs-6 col-sm-6 text-center" style="border-right:1px solid #808080;">
+                  <span ng-click="wishlist(list.pk);$event.stopPropagation();" style="cursor:pointer;">
+                    <i class="fa fa-heart  fa-3x"></i>
+                  </span>
+                </div>
+                <div class="col-md-6 col-xs-6 col-sm-6 text-center">
+                  <span ng-click="addToCart(list.pk);$event.stopPropagation();" style="cursor:pointer;">
+                    <i class="fa fa-shopping-cart fa-3x" ></i>
+                  </span>
+                </div> -->
+              </div>
+            </div>
         </div>
       </div>
     </div>
-    <!-- <div class="container-fluid" style="cursor:pointer;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
+  </div>
+  <!-- <div class="container-fluid" style="cursor:pointer;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
       <div class="row card bg-white text-center" >
     <div style="background-color:rgb(24, 89, 46); color:white; padding:5px 0px;margin:0px" ng-if="hover">
       <span ng-click="addToCart(l.pk)" style="cursor:pointer;">
